--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Your Name</title>
+</head>
+<body>
+    <h1>Welcome to My Website</h1>
+    <p>Hi, I'm [Your Name]. This is my personal website.</p>
+</body>
+</html>
 
