--- a/index.html
+++ b/index.html
@@ -11,3 +11,27 @@
 </body>
 </html>
 
+<body>
+    <header>
+        <h1>Welcome to [Your Name]'s Website</h1>
+        <p>I’m a pre-med student with a passion for biology and finance.</p>
+    </header>
+    <main>
+        <section>
+            <h2>About Me</h2>
+            <p>I have a degree in finance and am currently preparing for medical school. My goal is to combine analytical thinking and scientific curiosity to make a difference in healthcare.</p>
+        </section>
+        <section>
+            <h2>Projects</h2>
+            <ul>
+                <li><strong>Research:</strong> Studying PTSD effects on invertebrates.</li>
+                <li><strong>Finance:</strong> Developed financial models for healthcare startups.</li>
+            </ul>
+        </section>
+    </main>
+    <footer>
+        <p>Contact me: your-email@example.com</p>
+    </footer>
+</body>
+
+
